--- a/css/style_registration.css
+++ b/css/style_registration.css
@@ -2,17 +2,17 @@
       margin:0;
 			padding:0;
 			font-family: Arial, Verdana, Helvetica, sans-serif; 
-			font-size: 17px; 
+			font-size: 18px; 
 			line-height: 25px; 
 			color:#fff; 
 			text-align: justify; 
-			background:url('../images/grey.jpg') repeat top center;
+			background:url('../images2/grey.jpg') repeat top center;
     }
 	#background {
-    background: url("../images/two.jpg"); 
+    background: url("../images2/cats.jpg"); 
     background-position:  top center; 
     background-repeat: no-repeat; 
-    background-size: 62% 80%;
+    background-size: 60% 35%;
   }    
 #page #header{
   height:350px;
@@ -32,39 +32,8 @@
 }
 #page #body{
   width:960px;
-  margin:100px auto;
-  overflow:visible;
-}
-table.title {
-   background: url("../images/background.jpg"); 
-    font-family: Arial, Verdana, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 95%;
-    color:#ffffff;
-}
-table.title td, th {
-    border: 0px ;
-    text-align: center;
-    padding: 50px;
-    font-size: 20px;
-}
-table.records {
-   background: url("../images/background.jpg"); 
-    font-family: Arial, Verdana, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 95%;
-    color:#ffffff;
-}
-table.records th {
-    border: 1px solid #E0690B;
-    text-align: center;
-    padding: 8px;
-    color:#E0690B;
-}
-table.records td, th {
-    border: 2px solid #E0690B;
-    text-align: center;
-    padding: 8px;
+  margin:0 auto;
+  overflow:hidden;
 }
 
 /***********Start of Sidebar Style*******************/
@@ -79,7 +48,7 @@ table.records td, th {
   list-style-type:none;
   margin:65px 0 0 0;
   padding:0;
-  background: url("../images/background.jpg");
+  background: url("../images2/background.jpg");
 }
 
  ul.navigation li{
@@ -87,13 +56,13 @@ table.records td, th {
   padding: 10px  0;
   margin-top:-7px;
   height:auto;
-  background: url("../images/background.jpg");
+  background: url("../images2/background.jpg");
 }
 
 #page #body #sidebar ul.navigation li a{
   text-decoration:none;
   padding: 10px  10px 10px  10px;
-  background: url("../images/background.jpg");
+  background: url("../images2/background.jpg");
   color:#E0690B;
   font-size:18px;
   width:auto;
@@ -108,7 +77,7 @@ table.records td, th {
 #page #body #sidebar .connect{
   width:100px;
   height:65px;
-  background: url("../images/background.jpg");
+  background: url("../images2/background.jpg");
   text-align:center;
 }
 #page #body #sidebar .connect span{
@@ -118,9 +87,12 @@ table.records td, th {
   margin:5px 0;
   padding-top:5px;
 }
+#page #body #sidebar .connect a{
+  text-decoration:none;
+}
 #page #body #sidebar .connect a.facebook{
   display:inline-block;
-  background: url("../images/icon.gif"); 
+  background: url("../images2/icon.gif"); 
   background-position: 0 0; width: 20px; height: 19px;
   background-repeat:no-repeat;   
   width:20px;
@@ -136,7 +108,7 @@ table.records td, th {
 #page #body #content{
   width:790px;
   float:left;
-  overflow:visible;
+  overflow:hidden;
 }
 
 /************* Start of Registration ********************/
@@ -147,29 +119,14 @@ table.records td, th {
   padding:0;   
 }
 #page #body #content ul#featured li.primary{
-   background: url("../images/background.jpg"); 
-   background-position: center; 
-   background-repeat:no-repeat;   
-   width:790px;
-   height:400px;
-   list-style-type:none;
-}
-#page #body #content ul#featured li.primary p{
-   margin:50px 0 0 100px;
-   padding:0;
-   width:325px;
-   font-family: helvetica; 
-   font-size:18px;
-}
-
-#page #body #content ul#featured li.secondary{
+   background: url("../images2/background.jpg"); 
    background-position: center; 
    background-repeat:no-repeat;   
    width:790px;
    height:578px;
    list-style-type:none;
 }
-#page #body #content ul#featured li.secondary p{
+#page #body #content ul#featured li.primary p{
    margin:50px 0 0 100px;
    padding:0;
    width:325px;
@@ -198,7 +155,7 @@ input[type=submit],[type=reset] {
 }
 input[type=submit]:hover {
     background-color: #E78F4A;
-  }
+}
 input[type=reset]:hover {
     background-color: #E78F4A;
 }
@@ -213,22 +170,20 @@ float: left;
 /************* End of Registration ********************/
 
 /********************Start of footer*******************************/
-   #page #footer{
-     
-   width:960px;
-   margin:0 auto;
-   text-align:center; 
-   height:100px;
-   line-height:100px;
-   }
-   
-   #page #footer span{
-    height:100px;
-    line-height:100px;
-    color:#ffffff;
-    font-family: Arial; 
-    font-size:0px;
-   }
-/********************End of footer*******************************/
 
-          </li>
+#page #footer{
+  width:960px;
+  margin:0 auto;
+  text-align:center; 
+  height:100px;
+  line-height:100px;
+}
+#page #footer span{
+  height:100px;
+  line-height:100px;
+  color:#000000;
+  font-family: Arial; 
+  font-size:12px;
+}
+
+/********************End of footer*******************************/
